# SQLitey

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
sqlight/: __init__.py
tests/: test_sqlight.py  test_sqlitey.py
